# C-tests-runner

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  cli.cpp  entrypoint.sh  main.cpp  main_common.h  server.cpp  server_main.cpp
.run/: run.run.xml
adapters/: CMakeLists.txt
adapters/http/: CMakeLists.txt  http_adapter.cpp  http_adapter.h
adapters/include/: adapter_api.h  adapter_context.h  adapter_manager.h  adapter_status.h  adapter_utils.h  node_event_type.h  register_adapter.h  test_execution_adapter.h  transport_adapter.h
adapters/rabbit/: CMakeLists.txt  control_type.h  rabbit_adapter.cpp  rabbit_adapter.h  uv_amqp_handler.h
cloned-example-class/solution-class/src/: parallel.cpp
cloned-example-class/tests/: CMakeLists.txt
cloned-example-class/tests/include/: scan.h
cloned-example/replace-cmake-solution/: CMakeLists.txt
cloned-example/replace-cmake-solution/src/: parallel.cpp
cloned-example/solution/: CMakeLists.txt
cloned-example/solution/src/: parallel.cpp
cloned-example/tests/: CMakeLists.txt
cloned-example/tests/include/: scan.h
cloned-example/tests/src/: scan-test-correctness.cpp
cloned-example/wrong-solution/src/: parallel.cpp
config/: http.json  rabbit.json  resource-git.json  resource-local.json  server.json
examples/cloned-example-class/solution-class/include/: scan.h
examples/cloned-example-class/solution-class/src/: parallel.cpp
examples/cloned-example-class/tests/: CMakeLists.txt
examples/cloned-example-class/tests/src/: scan-test-correctness.cpp
examples/cloned-example/replace-cmake-solution/: CMakeLists.txt
examples/cloned-example/replace-cmake-solution/src/: parallel.cpp
examples/cloned-example/solution/src/: parallel.cpp
examples/cloned-example/tests/: CMakeLists.txt
examples/cloned-example/tests/src/: scan-test-performance.cpp
examples/cloned-example/wrong-solution/: CMakeLists.txt
examples/cloned-example/wrong-solution/include/: scan.h
examples/cloned-example/wrong-solution/src/: parallel.cpp
parallel_lib/: CMakeLists.txt
parallel_lib/include/par/: memory_guard.h  monitor.h  pragma.h
parallel_lib/src/: memory_guard.cpp  memory_limit_inject.cpp  monitor.cpp
resource/: CMakeLists.txt
resource/git/: CMakeLists.txt  resource_git.cpp  resource_git.h
resource/include/: register_resource_provider.h  resource_context.h  resource_provider.h  resource_provider_status.h
resource/local/: CMakeLists.txt  resource_local.cpp  resource_local.h
server_core/: CMakeLists.txt
server_core/src/: build_service.cpp  build_service.h  cmake_generator.cpp  dll_utils.h  job_queue.cpp  job_queue.h  numa_utils.cpp  plugin_loader.cpp  plugin_loader.h  process_utils.h  test_result_converter.cpp  test_result_converter.h  test_runner_service.cpp  test_scenario_result_converter.cpp  test_scenario_result_converter.h  time_utils.h
solution/: CMakeLists.txt
solution/src/: quick_sort.cpp  quick_sort.h
test_engine/: CMakeLists.txt
test_engine/src/: api_types.h  build_service.cpp  build_service.h  cmake_generator.cpp  cmake_generator.h  config_utils.h  dll_utils.h  http_client.cpp  http_client.h  job_queue.cpp  job_queue.h  numa_utils.h  plugin_export.h  plugin_loader.cpp  plugin_loader.h  process_utils.h  project_utils.h  register_test.h  resource_manager.h  test.h  test_engine.cpp  test_engine.h  test_registry.cpp  test_registry.h  test_result.h  test_result_converter.cpp  test_result_converter.h  test_runner_service.cpp  test_runner_service.h  test_scenario_extension.cpp  test_scenario_extension.h  test_scenario_result.h  test_scenario_result_converter.cpp  test_scenario_result_converter.h  thread_counts.h  time_utils.h
tests/: CMakeLists.txt
tests/extensions/: CMakeLists.txt  register-all.cpp  test_correctness.cpp  test_perf.cpp
tests/extensions/include/: quick_sort.h
tests/extensions/src/: test_correctness.cpp  test_edge_cases.cpp  test_parallel_verify.cpp  test_scalability.cpp  test_stability.cpp
tests/solution/: CMakeLists.txt
tests/solution/src/: quick_sort.cpp
tools/: CMakeLists.txt  server-test.http
tools/src/: http_client_mock.cpp  main.cpp  mock_utils.h  rabbit_client_mock.cpp  test_server_pipeline.cpp
